Feature/functional test batch

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -89,8 +89,9 @@ functional-testing:cpu:
   stage: test
   before_script:
     - pip install torch==1.12.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
-    - pip install .[server,cpu,test]
+    - pip install .[client,server,cpu,test]
     - citbx install packages verbio-verbio8k-es-es-am
+    - bash tests/functional/launch_server.sh
   script:
     - pytest tests/functional --junit-xml=report.xml --verbose
 
@@ -101,8 +102,9 @@ functional-testing:gpu:
     - gpu
   before_script:
     - source ~/.bashrc
-    - CUDACXX=/usr/local/cuda/bin/nvcc LDFLAGS="-L/root/miniconda3/lib/ -liomp5" pip install .[server,gpu,test]
+    - CUDACXX=/usr/local/cuda/bin/nvcc LDFLAGS="-L/root/miniconda3/lib/ -liomp5" pip install .[client,server,gpu,test]
     - citbx install packages verbio-verbio8k-es-es-am
+    - bash tests/functional/launch_server.sh
   script:
     - python --version
     - pytest tests/functional --junit-xml=report.xml --verbose
