--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,10 +65,7 @@ server = [
     "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/171256e80601d9542833c68b4245cd6b089c5eeabdde630f3385b93d4a8909aa/pyformatter-1.3.11-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
     "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/c2efb5f5335d12f986c6eac5dd6532cc41779b0b544e2705f24b9c2763d20014/pyformatter-1.3.11-cp38-cp38-linux_x86_64.whl ; python_version=='3.8' and platform_system=='Linux'",
     "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/9d7278a1d271c73e1879a8d9e0d1981fbc998625bb3bee68584c0f620a537012/pyformatter-1.3.11-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
-    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/7c7b0b4600cf3d5b40d2383ea7c1af31a65940c2cd55df9e88517f5f27bc6ce3/pyformatter-1.3.11-cp36-cp36m-linux_x86_64.whl ; python_version=='3.6' and platform_system=='Linux'",
-    "simple-ctc @ https://__token__:glpat-r_85xcYsQCiEX7aMNPPa@gitlab.lan.verbio.com/api/v4/projects/1440/packages/pypi/files/a194546b28db93b4f3c025154f813173e861d87194d0820d6896fcecd780afc4/simple_ctc-0.0.1-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
-    "simple-ctc @ https://__token__:glpat-r_85xcYsQCiEX7aMNPPa@gitlab.lan.verbio.com/api/v4/projects/1440/packages/pypi/files/b0fdb586af32bcc5f51ca605d21c8fd26f4af5df147a54bd9a57043ca495f9de/simple_ctc-0.0.1-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
-]
+    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/7c7b0b4600cf3d5b40d2383ea7c1af31a65940c2cd55df9e88517f5f27bc6ce3/pyformatter-1.3.11-cp36-cp36m-linux_x86_64.whl ; python_version=='3.6' and platform_system=='Linux'", ]
 cpu = [
     "torch @ https://__token__:glpat-r_85xcYsQCiEX7aMNPPa@gitlab.lan.verbio.com/api/v4/projects/1440/packages/pypi/files/d330a63cac69f642fc320123096c5a37638409743ddf45bf5b17a293ad92eaf7/torch-1.12.0a0+git8c5c07c-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
     "torch @ https://__token__:glpat-r_85xcYsQCiEX7aMNPPa@gitlab.lan.verbio.com/api/v4/projects/1440/packages/pypi/files/ea4ca591452ed10224b98a83d8ac0a949b3cff4b6c50b4137219595b32ab4567/torch-1.12.0a0+git8c5c07c-cp39-cp39-linux_x86_64.whl  ; python_version=='3.9' and platform_system=='Linux'",
@@ -77,10 +74,13 @@ cpu = [
     "onnxruntime-dnnl @ https://__token__:glpat-wPfyyLYAyyXSEEzXVB-7@gitlab.lan.verbio.com/api/v4/projects/1436/packages/pypi/files/977077043665d153f8967d972a2efe2dee81eb6875112e0bf519eea4f1fce1ee/onnxruntime_dnnl-1.14.0-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
     "numpy @ https://pypi.anaconda.org/intel/simple/numpy/1.21.4/numpy-1.21.4-16-cp37-cp37m-manylinux2014_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
     "numpy @ https://pypi.anaconda.org/intel/simple/numpy/1.22.3/numpy-1.22.3-0-cp39-cp39-manylinux2014_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
+    "simple-ctc @ https://__token__:glpat-r_85xcYsQCiEX7aMNPPa@gitlab.lan.verbio.com/api/v4/projects/1440/packages/pypi/files/a194546b28db93b4f3c025154f813173e861d87194d0820d6896fcecd780afc4/simple_ctc-0.0.1-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
+    "simple-ctc @ https://__token__:glpat-r_85xcYsQCiEX7aMNPPa@gitlab.lan.verbio.com/api/v4/projects/1440/packages/pypi/files/b0fdb586af32bcc5f51ca605d21c8fd26f4af5df147a54bd9a57043ca495f9de/simple_ctc-0.0.1-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
 ]
 gpu = [
     "torch == 1.12.0a0+git8c5c07c",
     "onnxruntime-gpu >= 1.12.1",
+    "simple-ctc @ git+https://github.com/mthrok/ctcdecode@b1a30d7a65342012e0d2524d9bae1c5412b24a23",
 ]
 test = [
     "pytest >= 6.2.5",
