fix/ Integration Tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,13 +3,13 @@ stages:
   - test
   - build
   - testing-promote
-  - testing-functional
+  - testing-integration
   - staging-promote
   - staging-e2e
   - stable-promote
   - stable-deploy
   - cleanup
-  - integration-testing
+  - speech-center-integration-testing
 
 image: docker.registry.verbio.com/engineering/devops/debian10-citbx-cpp-rust:latest
 
@@ -57,9 +57,7 @@ lint:rust:nightly:
 unit-testing:
   stage: test
   before_script:
-    - pip install torch==1.12.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
     - pip install .[server,cpu,test]
-    - citbx install packages verbio-verbio8k-es-es-am
   script:
     - python --version
     - pytest tests/unit --junit-xml=report.xml --cov=asr4 --cov-config=.coveragerc --cov-report=html:coverage --cov-report=term --verbose
@@ -85,29 +83,46 @@ unit-testing:rust:
       - tarpaulin-report.html
   coverage: '/^(\d+\.\d*)\% coverage, .+$/'
 
-functional-testing:cpu:
+functional-testing:
   stage: test
   before_script:
-    - pip install torch==1.12.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
-    - pip install .[client,server,cpu,test]
-    - citbx install packages verbio-verbio8k-es-es-am
-    - bash tests/functional/launch_server.sh
+    - pip install .[server,cpu,test]
   script:
     - pytest tests/functional --junit-xml=report.xml --verbose
 
-functional-testing:gpu:
+integration-testing:cpu:
+  extends: .template:integration-testing
   stage: test
-  image: docker.registry.verbio.com/engineering/devops/debian10-citbx-cpp-rust-torch-gpu:latest
-  tags:
-    - gpu
+  only:
+    - tags
+    - branches
+    - web
+    - master
   before_script:
-    - source ~/.bashrc
-    - CUDACXX=/usr/local/cuda/bin/nvcc LDFLAGS="-L/root/miniconda3/lib/ -liomp5" pip install .[client,server,gpu,test]
-    - citbx install packages verbio-verbio8k-es-es-am
-    - bash tests/functional/launch_server.sh
-  script:
-    - python --version
-    - pytest tests/functional --junit-xml=report.xml --verbose
+    - pip install .[client,server,cpu,test]
+    - export VERSION=$(cat VERSION | xargs echo -n)
+    - bash tests/integration/launch_server.sh ${MODELS_PATH}/asr4-${LANGUAGE}-${VERSION}.onnx ${MODELS_PATH}/asr4-${LANGUAGE}-${VERSION}.dict.ltr.txt $LANGUAGE
+    # Install the remaining testing dependencies
+    - !reference [.template:integration-testing, before_script]
+
+#integration-testing:gpu:
+#  extends: .template:integration-testing
+#  stage: test
+#  image: docker.registry.verbio.com/engineering/devops/debian10-citbx-cpp-rust-torch-gpu:latest
+#  only:
+#    - tags
+#    - branches
+#    - web
+#    - master
+#  tags:
+#    - gpu
+#  before_script:
+#    - source ~/.bashrc
+#    - CUDACXX=/usr/local/cuda/bin/nvcc LDFLAGS="-L/root/miniconda3/lib/ -liomp5" pip install .[client,server,gpu,test]
+#    - export VERSION=$(cat VERSION | xargs echo -n)
+#    - bash tests/integration/launch_server.sh ${MODELS_PATH}/asr4-${LANGUAGE}-${VERSION}.onnx ${MODELS_PATH}/asr4-${LANGUAGE}-${VERSION}.dict.ltr.txt $LANGUAGE 1
+#    # Install the remaining testing dependencies
+#    - !reference [.template:integration-testing, before_script]
 
 
 
@@ -185,20 +200,20 @@ testing:promote:gpu:
     - docker push "${IMAGE_NAME}"
 
 
-testing:functional-testing:cpu:
-  extends: .template:functional-testing
+testing:integration-testing:cpu:
+  extends: .template:integration-testing
   services:
     - name: ${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
       alias: asr4-server
       variables:
         LANGUAGE: ${LANGUAGE}
+  variables:
+    ASR4_HOSTNAME: asr4-server
 
-testing:functional-testing:gpu:
-  extends: .template:functional-testing
+testing:integration-testing:gpu:
+  extends: .template:integration-testing
   tags:
     - gpu
-  variables:
-    ASR4_HOSTNAME: 0.0.0.0
   before_script:
     # Install docker to run ASR4 server docker
     - !reference [.install-docker, before_script]
@@ -207,13 +222,13 @@ testing:functional-testing:gpu:
     - docker kill asr4-gpu-${LANGUAGE} || true && docker rm asr4-gpu-${LANGUAGE} || true
     - docker run --name asr4-gpu-${LANGUAGE} -d --gpus=all --network="container:$JOB_DOCKER_ID" ${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
     # Install the remaining testing dependencies
-    - !reference [.template:functional-testing, before_script]
+    - !reference [.template:integration-testing, before_script]
   after_script:
     - docker kill asr4-gpu-${LANGUAGE} && docker rm asr4-gpu-${LANGUAGE}
 
 
-.template:functional-testing:
-  stage: testing-functional
+.template:integration-testing:
+  stage: testing-integration
   only:
     - tags
   parallel:
@@ -346,8 +361,8 @@ cleanup:
 
 
 
-integration-testing:
-  stage: integration-testing
+speech-center-integration-testing:
+  stage: speech-center-integration-testing
   only:
     - tags
   variables:
