debug: Force re-definition of LANGUAGE ENV variable.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ testing:integration-testing:cpu:
         LANGUAGE: "${LANGUAGE}"
   variables:
     ASR4_HOSTNAME: asr4-server
-
+    LANGUAGE: "${LANGUAGE}"
 
 .template:integration-testing:
   stage: testing-integration
