--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 stages:
+  - debug
   - staging-e2e
 
 image: docker.registry.verbio.com/engineering/devops/debian10-citbx-cpp-rust:latest
@@ -11,12 +12,21 @@ variables:
   MODELS_PATH: /mnt/shared/squad2/projects/asr4models/
 
 
+debug:
+  stage: debug
+  only:
+    - tags
+  script:
+    - echo "${CI_COMMIT_TAG}"
+    - echo "${DOCKER_IMAGE_VERSION}"
+
+
 staging:e2e:
   stage: staging-e2e
   only:
     - tags
   variables:
-    TF_VAR_asr4_version: ${DOCKER_IMAGE_VERSION}
+    TF_VAR_asr4_version: ${CI_COMMIT_TAG}
   trigger:
     project: csr/asr4-benchmark
     strategy: depend
