--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,8 @@ staging:e2e:
   only:
     - tags
   variables:
-    TF_VAR_asr4_version: ${DOCKER_IMAGE_VERSION}
+    # Test Comment
+    TF_VAR_asr4_version: ${CI_COMMIT_TAG}
   trigger:
     project: csr/asr4-benchmark
     strategy: depend
